[package]
name = "gtsp"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
count-iterations = []

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
duration-str = "0.11.2"
itertools = "0.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = "1.0.203"
serde_derive = "1.0.203"
